# codecrafters-interpreter-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: astprinter.py  environment.py  exceptions.py  interpreter.py  main.py  parser.py  scanner.py  tokenizer.py  tokens.py
app/tool/: main.py
tests/integration/: __init__.py  test_main.py  test_print_tokens.py
tests/integration/testdata/: test01.out  test07.out  test09.out  test12.out  test14.lox  test14.out  test15.out
tests/integration/testdata/cli/evaluate/: test09.lox  test19.lox  test20.lox  test27.lox  test38.lox  test40.lox  test47.lox  test50.lox  test52.lox
tests/integration/testdata/cli/parse/: test05.out  test06.out  test07.lox  test07.out  test09.lox  test09.out
tests/integration/testdata/cli/run/: test00.out  test01.lox  test02.out  test03.lox  test04.lox  test05.lox  test08.lox  test09.err  test09.out  test10.out  test12.lox  test13.out  test14.lox  test15.lox  test17.err  test18.err  test18.lox  test19.err  (+17 more)
tests/integration/testdata/evaluate/: test10.lox  test13.lox  test16.lox  test17.lox  test24.lox  test26.lox  test30.lox  test31.lox  test41.lox  test42.lox  test43.lox  test45.lox  test46.lox  test51.lox  test53.lox
tests/integration/testdata/parse/: test00.out  test04.out  test08.out
tests/integration/testdata/run/: test03.out  test04.out  test05.out  test10.err  test10.lox  test21.lox  test23.lox  test24.out  test27.lox  test28.err  test30.lox
tests/integration/testdata/tokenize/: test00.out  test13.err
tests/unit/: test_scan.py
(+9 files in other folders)
