[tool.poetry]
name = "codecrafters-interpreter-python"
version = "0.1.0"
description = ""
authors = ["Seila Gamo <seilagamo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pylint = "^3.3.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.mypy]
python_version = "3.12"
strict = true
follow_imports_for_stubs =false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_decorators = false

[tool.pylint.basic]
no-docstring-rgx = "^_|^main$"
# source-roots = "."

[tool.pylint.'MESSAGES CONTROL']
disable = "E0602, R0903"

[tool.pylint.format]
max-line-length = 80

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "--cov"
python_files = [
    "test*.py"
]